file directory management

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!-- HEADER -->
     <header>
-        <img src="logo.png" alt="Barbershop Mustermann" class="logo-img" id="logo">
+        <img src="images/logo.png" alt="Barbershop Mustermann" class="logo-img" id="logo">
         <nav>
             <a href="#services">Leistungen</a>
             <a href="#team">Team</a>
@@ -24,7 +24,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="logo-bg">
-            <img src="logo.png" alt="Barbershop Mustermann" class="hero-logo">
+            <img src="/images/logo.png" alt="Barbershop Mustermann" class="hero-logo">
         </div>
         <h1>Barbershop Mustermann</h1>
         <p>Modernes Styling, präzise Haarschnitte und perfekte Bartpflege.</p>
@@ -72,9 +72,9 @@
     <section class="panel" id="gallery">
         <h2>Galerie</h2>
         <div class="gallery-flex">
-            <div class="g-item"><img src="image1.jpg" alt="Galerie Bild 1"></div>
-            <div class="g-item"><img src="image2.jpg" alt="Galerie Bild 2"></div>
-            <div class="g-item"><img src="image3.jpg" alt="Galerie Bild 3"></div>
+            <div class="g-item"><img src="images/image1.jpg" alt="Galerie Bild 1"></div>
+            <div class="g-item"><img src="images/image2.jpg" alt="Galerie Bild 2"></div>
+            <div class="g-item"><img src="images/image3.jpg" alt="Galerie Bild 3"></div>
         </div>
     </section>
 
