fix image error

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="logo-bg">
-            <img src="/images/logo.png" alt="Barbershop Mustermann" class="hero-logo">
+            <img src="images/logo.png" alt="Barbershop Mustermann" class="hero-logo">
         </div>
         <h1>Barbershop Mustermann</h1>
         <p>Modernes Styling, präzise Haarschnitte und perfekte Bartpflege.</p>
